--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "postinstall": "npm run build",
+    "postinstall": "npm run build"
   },
   "eslintConfig": {
     "extends": [
