--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webSocketClient",
+  "name": "license_keys_generator",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,23 +11,39 @@
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "animate.css": "^4.1.1",
     "antd": "^4.12.0",
     "axios": "^0.21.1",
+    "dotenv": "^8.2.0",
+    "emoji-picker-react": "^3.4.2",
+    "getusermedia": "^2.0.1",
     "js-cookie": "^2.2.1",
     "mdbreact": "^5.0.1",
+    "mic-recorder-to-mp3": "^2.2.2",
+    "moment-timezone": "^0.5.33",
     "node-sass": "^5.0.0",
     "query-string": "^6.13.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-emoji": "^0.5.0",
     "react-google-login": "^5.2.2",
+    "react-js-pagination": "^3.0.3",
+    "react-loading-skeleton": "^2.2.0",
     "react-lottie": "^1.2.3",
+    "react-mic": "^12.4.6",
+    "react-notifications": "^1.7.2",
+    "react-notifications-component": "^3.0.3",
+    "react-paginate": "^7.1.0",
+    "react-phone-input-2": "^2.13.9",
+    "react-phone-number-input": "^3.1.16",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
     "react-scroll": "^1.8.1",
     "react-scroll-to-bottom": "^4.1.0",
+    "react-toastify": "^7.0.3",
     "socket.io-client": "^2.2.0",
+    "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4",
     "websocket": "^1.0.33"
   },
